Added exports to NAMESPACE.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/pba@10 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,1 +1,7 @@
-import("plyr", "ggplot2")
+useDynLib(pba, .registration = TRUE)
+
+export(expit, logit, pba, pbaBackCalculate, pbaBiasCor, pbaBiasCorCheck,
+	   pbaDistr, pbaIterate, pbaMisclassification, pbaMisclassificationCheck,
+	   pbaPlotBias, pbaPlotEstimates, pbaSummary, pbaVariable, print.pba)	
+
+import(plyr, ggplot2)
