Added LazyLoad and LazyData.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/pba@11 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -14,4 +14,5 @@ only methods for adjustment of misclassification bias are included.
 License: GPL-3
 URL: http://pba.r-forge.r-project.org/
 BugReports: https://r-forge.r-project.org/tracker/?func=add&group_id=988&atid=3913		 
-				 
+LazyLoad: yes
+LazyData: yes				 
