Added import(QRMlib) to namespace
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/pba@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,4 +4,6 @@ export(expit, logit, pba, pbaBackCalculate, pbaBiasCor, pbaBiasCorCheck,
 	   pbaDistr, pbaIterate, pbaMisclassification, pbaMisclassificationCheck,
 	   pbaPlotBias, pbaPlotEstimates, pbaSummary, pbaVariable, print.pba)	
 
-import(plyr, ggplot2)
+import(plyr)
+import(ggplot2)
+import(QRMlib)
