--- a/devel/pba.roxygen/NAMESPACE
+++ b/devel/pba.roxygen/NAMESPACE
@@ -6,5 +6,8 @@ export(pba)
 S3method(print, pba)
 export(summary.pba)
 export(pbaDistr)
+export(plotBias)
+export(plotEstimates)
 export(rtrapezoid)
 export(pbaVariable)
+S3method(plot, pba)
