--- a/roxygen/DESCRIPTION
+++ b/roxygen/DESCRIPTION
@@ -6,7 +6,7 @@ Author@R: person("Jeremy", "Hetzel", "Thoms", email =
     "jthetzel@gmail.com")
 Author: Jeremy T. Hetzel <jthetzel@gmail.com>
 Maintainer: Jeremy T. Hetzel <jthetzel@gmail.com>
-Depends: R (>= 2.12.0), plyr, ggplot2, reshape, fUtilities
+Depends: R (>= 2.12.0), plyr, ggplot2, reshape, copula, fUtilities
 Description: The pba package performs probabilistic bias analyses with
     methods adapted from Lash TL, Fox MP, and Fink AK's Applying
     Quantitative Bias Analysis to Epidemiological Data (2010). The
